:bug: Fix map events not working because of z-index -1

--- a/meteor/imports/ui/components/WayPointList/WayPointList.scss
+++ b/meteor/imports/ui/components/WayPointList/WayPointList.scss
@@ -2,4 +2,5 @@ div.WayPointList{
     position: absolute;
     bottom: 0;
     background-color: rgba(255,255, 255,0.5);
+    z-index:1;
 }
